@@ -1,3 +1,7 @@
+2003-04-13  Mark Kettenis  <kettenis@gnu.org>
+
+	* x86-64-tdep.c (x86_64_breakpoint_from_pc): Removed.
+
 2003-04-12  Andrew Cagney  <cagney@redhat.com>
 
 	* frame.h (struct frame_info): Move definition from here ...
